--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,14 @@ dist/
 wheels/
 *.egg-info
 
+# Testing, coverage, and tool caches
+.coverage
+.coverage.*
+coverage.xml
+htmlcov/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+
 # Virtual environments
 .venv
